--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Yandex</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="stocks">Stocks</string>
+    <string name="favorite">Favorite</string>
+    <string name="find_company_or_ticker">Find company or ticker</string>
 </resources>
