--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
-    <string name="app_name">Yandex</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name" translatable="false">Yandex</string>
     <string name="stocks">Stocks</string>
     <string name="favorite">Favorite</string>
     <string name="find_company_or_ticker">Find company or ticker</string>
     <string name="popular_requests">Popular requests</string>
+    <string name="chart">Chart</string>
+    <string name="summary">Summary</string>
+    <string name="news">News</string>
+    <string name="period_day">D</string>
+    <string name="period_week">W</string>
+    <string name="period_month">M</string>
+    <string name="period_year">Y</string>
+    <string name="period_all">All</string>
 </resources>
